--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,8 @@ footer p {
 
 .btn-contact {
   margin: 0 auto;
-  width: 400px;
+  width: 100%;
+  max-width: 400px;
   padding: 10px;
   color: white;
   border-radius: 10px;
