--- a/css/styles.css
+++ b/css/styles.css
@@ -264,7 +264,7 @@ header {
 }
 
 footer {
-  margin-top: 50px;
+  margin-top:50px;
   background: #100c1e;
   padding: 20px;
   color: #fff;
@@ -397,6 +397,7 @@ footer p {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  min-height: 100vh; 
 }
 
 .title-registration {
@@ -407,7 +408,6 @@ footer p {
   font-weight: 700;
   line-height: normal;
   padding: 20px;
-  margin-bottom: 50px;
 }
 
 .registration {
@@ -523,3 +523,5 @@ footer p {
   font-size: 1rem;
   cursor: pointer;
 }
+
+
