--- a/css/styles.css
+++ b/css/styles.css
@@ -530,7 +530,7 @@ footer p {
   display: flex;
   justify-content: center;
   align-items: center;
-  border: 2px solid red;
+  /* border: 2px solid red; */
 }
 
 .start-game {
